# pyfunge

./: .gitignore  README.md  instruction_set.py  interpreter.py  main.py  pyproject.toml
.github/workflows/: python-package-conda.yml
examples/: test.bf
pyfunge/: __main__.py  instruction_set.py  interpreter.py
tests/: test_pyfunge.py
