[tool.poetry]
name = "pyfunge"
version = "0.1.0"
description = "Befunger interpreter in Python"
authors = ["Thariq Fahry <37890989+thariqfahry@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
